--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -500,8 +500,8 @@
     "sensory = sensory[sensory.celltype ==\"sensory\"]\n",
     "code =  \"BRAIN.neuronsToActicate=[];\\n\"\n",
     "for (annotation,cluster), neurons in sensory.groupby([\"additional_annotations\",\"level_7_cluster\"]):\n",
-    "    code += ( f\"BRAIN.neuronsToActicate=['R_{annotation}_{cluster}'] = false;\\n\")\n",
-    "    code += ( f\"BRAIN.neuronsToActicate=['L_{annotation}_{cluster}'] = false;\\n\")\n",
+    "    code += ( f\"BRAIN.neuronsToActicate['R_{annotation}_{cluster}'] = false;\\n\")\n",
+    "    code += ( f\"BRAIN.neuronsToActicate['L_{annotation}_{cluster}'] = false;\\n\")\n",
     "code +=\"\\n\"\n",
     "code += \"BRAIN.update = function() {\\n\"\n",
     "\n",
