Brain now works

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,17 +505,6 @@
     "code +=\"\\n\"\n",
     "code += \"BRAIN.update = function() {\\n\"\n",
     "\n",
-    "\n",
-    "\"\"\"\n",
-    "    if (BRAIN.stimulateHungerNeurons) {\n",
-    "        BRAIN.dendriteAccumulate(\"RIML\");\n",
-    "        BRAIN.dendriteAccumulate(\"RIMR\");\n",
-    "        BRAIN.dendriteAccumulate(\"RICL\");\n",
-    "        BRAIN.dendriteAccumulate(\"RICR\");\n",
-    "        BRAIN.runconnectome();\n",
-    "    }\n",
-    "\"\"\"\n",
-    "code +=\"}\\n\"\n",
     "groups = []\n",
     "for (annotation,cluster), neurons in sensory.groupby([\"additional_annotations\",\"level_7_cluster\"]):\n",
     "\n",
@@ -532,10 +521,11 @@
     "    code += f\"        BRAIN.runconnectome();\\n    }}\\n\"\n",
     "    groups.append(f\"D_{annotation}_{cluster}\")\n",
     "\n",
-    "code +=\"}}\\n\"\n",
+    "code +=\"}\\n\"\n",
     "\n",
     "with open(\"connectome.update.js\",\"w\") as f:\n",
-    "        f.write(code)\n"
+    "        f.write(code)\n",
+    "\n"
    ]
   },
   {
