satisfied with the input output and visualization

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,19 +527,21 @@
     "    for neuron in neurons.left_id:\n",
     "        if neuron ==\"no pair\":continue\n",
     "        code += f\"        BRAIN.dendriteAccumulate('{neuron}');\\n\"\n",
-    "    code += f\"        BRAIN.runconnectome();\\n    }}\\n\"\n",
+    "        code += f\"        BRAIN.postSynaptic['{neuron}'][BRAIN.nextState] += 40.0 ;\\n\"\n",
+    "    code += \"    }\\n\" \n",
     "    code += f\"    if (BRAIN.neuronsToActicate['R_{annotation}_{cluster}']){{\\n\"\n",
     "    for neuron in neurons.right_id:\n",
     "        if neuron ==\"no pair\":continue\n",
     "        code += f\"        BRAIN.dendriteAccumulate('{neuron}');\\n\"\n",
-    "    code += f\"        BRAIN.runconnectome();\\n    }}\\n\"\n",
-    "    groups.append(f\"D_{annotation}_{cluster}\")\n",
+    "        code += f\"        BRAIN.postSynaptic['{neuron}'][BRAIN.nextState] += 40.0 ;\\n\" \n",
     "\n",
+    "    code += f\"    }}\\n\"\n",
+    "    groups.append(f\"D_{annotation}_{cluster}\")\n",
+    "code += \"    BRAIN.runconnectome();\\n\"\n",
     "code +=\"}\\n\"\n",
     "\n",
     "with open(\"connectome.update.js\",\"w\") as f:\n",
-    "        f.write(code)\n",
-    "\n"
+    "        f.write(code)\n"
    ]
   },
   {
